Add image build script

--- a/images/haraka/Dockerfile
+++ b/images/haraka/Dockerfile
@@ -7,18 +7,18 @@ ARG LISTEN_PORT=25
 ENV YES_REALLY_DO_DISCARD=true
 
 # Install Haraka
-RUN npm install -g haraka@${HARAKA_VERSION}
+RUN npm install -g Haraka@${HARAKA_VERSION}
 
 RUN haraka -i /haraka-duotail
 
 COPY package.json /haraka-duotail/package.json
 COPY config/plugins /haraka-duotail/config/plugins
-COPY stmp.ini /haraka-duotail/config/smtp.ini
+COPY config/smtp.ini /haraka-duotail/config/smtp.ini
 
 # Install dependencies
 RUN cd /haraka-duotail && npm install
 
-expose ${LISTEN_PORT}
+EXPOSE ${LISTEN_PORT}
 
 # Configure and RUN Haraka as service
 RUN mkdir -p /var/log/haraka
