--- a/images/haraka/supervisord.conf
+++ b/images/haraka/supervisord.conf
@@ -7,3 +7,7 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/haraka/err.log
 stdout_logfile=/var/log/haraka/out.log
+
+[eventlistener:healthcheck]
+command=/healthcheck.sh
+events=PROCESS_STATE
