Add default host list

--- a/images/haraka/Dockerfile
+++ b/images/haraka/Dockerfile
@@ -14,6 +14,8 @@ RUN haraka -i /haraka-duotail
 COPY package.json /haraka-duotail/package.json
 COPY config/plugins /haraka-duotail/config/plugins
 COPY config/smtp.ini /haraka-duotail/config/smtp.ini
+COPY config/host_list /haraka-duotail/config/host_list
+
 
 # Install dependencies
 RUN cd /haraka-duotail && npm install
