change health check to use endpoint 8080/health

--- a/images/haraka/supervisord.conf
+++ b/images/haraka/supervisord.conf
@@ -8,6 +8,9 @@ autorestart=true
 stderr_logfile=/var/log/haraka/err.log
 stdout_logfile=/var/log/haraka/out.log
 
-[eventlistener:healthcheck]
-command=/healthcheck.sh
-events=PROCESS_STATE
+[program:health_server]
+command=node /health_server.js
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/haraka/health_server.err.log
+stdout_logfile=/var/log/haraka/health_server.out.log
