Working on postfix image

--- a/images/postfix/Dockerfile
+++ b/images/postfix/Dockerfile
@@ -1,16 +1,16 @@
 FROM ubuntu:latest
 
-ARG EMAIL
-ARG MAIL_NAME
-ARG SMTP_DOMAIN
-ARG SMTP_PORT
+ARG SMTP_DOMAIN=example.com
+ARG SMTP_PORT=25
 
 RUN apt-get update && \
     apt-get install -y mailutils && \
     apt install -y postfix
 
-#COPY main.cf /etc/postfix/main.cf
-#
+COPY config/main.cf.partial /etc/postfix/main.cf
+
+RUN sh -c 'echo "mydomain = ${SMTP_DOMAIN}" >> /etc/postfix/main.cf'
+
 #RUN sh -c 'echo "root: ${EMAIL}" >> /etc/aliases' && \
 #    sh -c 'echo "${MAIL_NAME}" >> /etc/mailname' && \
 #    sh -c 'echo "[${SMTP_DOMAIN}]:${SMTP_PORT} ${EMAIL}:${EMAIL_PASSWORD}" >> /etc/postfix/sasl_passwd' && \
@@ -19,4 +19,10 @@ RUN apt-get update && \
 #
 #CMD service postfix restart && tail -f /dev/null
 
-CMD ["tail", "-f", "/dev/null"]
+# Install supervisord
+RUN apt-get update && apt-get install -y supervisor
+
+EXPOSE ${SMTP_PORT}
+EXPOSE 8080
+
+CMD ["/usr/bin/supervisord"]
