--- a/images/postfix/Dockerfile
+++ b/images/postfix/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM node:23.8.0
 
 ARG SMTP_DOMAIN=example.com
 ARG SMTP_PORT=25
@@ -8,21 +8,25 @@ RUN apt-get update && \
     apt install -y postfix
 
 COPY config/main.cf.partial /etc/postfix/main.cf
+COPY config/mailname /etc/mailname
 
-RUN sh -c 'echo "mydomain = ${SMTP_DOMAIN}" >> /etc/postfix/main.cf'
+RUN echo "mydomain = ${SMTP_DOMAIN}" >> /etc/postfix/main.cf && \
+    echo "test: root" >> /etc/aliases && \
+    newaliases
 
-#RUN sh -c 'echo "root: ${EMAIL}" >> /etc/aliases' && \
-#    sh -c 'echo "${MAIL_NAME}" >> /etc/mailname' && \
-#    sh -c 'echo "[${SMTP_DOMAIN}]:${SMTP_PORT} ${EMAIL}:${EMAIL_PASSWORD}" >> /etc/postfix/sasl_passwd' && \
-#    postmap /etc/postfix/sasl_passwd && \
-#    chmod 0600 /etc/postfix/sasl_passwd /etc/postfix/sasl_passwd.db
-#
-#CMD service postfix restart && tail -f /dev/null
+RUN echo "test@exmaple.com test@example.com" >> /etc/postfix/virtual && \
+    postmap /etc/postfix/virtual
 
 # Install supervisord
 RUN apt-get update && apt-get install -y supervisor
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 EXPOSE ${SMTP_PORT}
 EXPOSE 8080
+
+# Add health check endpoint
+COPY health_server.js /health_server.js
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+  CMD curl -f http://localhost:8080/health || exit 1
 
 CMD ["/usr/bin/supervisord"]
