Fix haraka issue

--- a/images/haraka/supervisord.conf
+++ b/images/haraka/supervisord.conf
@@ -1,15 +1,16 @@
 [supervisord]
 nodaemon=true
+loglevel=info
 
 [program:haraka]
-command=haraka -c /haraka-duotail
+command=/usr/local/bin/haraka -c /haraka-duotail
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/haraka/err.log
 stdout_logfile=/var/log/haraka/out.log
 
 [program:health_server]
-command=node /health_server.js
+command=/usr/local/bin/node /health_server.js
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/haraka/health_server.err.log
