update postfix docker image

--- a/images/postfix/supervisord.conf
+++ b/images/postfix/supervisord.conf
@@ -9,7 +9,7 @@ stderr_logfile=/var/log/postfix/err.log
 stdout_logfile=/var/log/postfix/out.log
 
 [program:health_server]
-command=node /health_server.js
+command=/usr/local/bin/node /health_server.js
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/postfix/health_server.err.log
