Add curl to kcat for debug purpose

--- a/images/kcat/Dockerfile
+++ b/images/kcat/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:24.04
 
 RUN apt-get update && \
-    apt-get install -y kafkacat
+    apt-get install -y kafkacat && \
+    apt-get install -y curl
 
 EXPOSE 8080
 
