fix postfix health check endpoint

--- a/images/postfix/supervisord.conf
+++ b/images/postfix/supervisord.conf
@@ -10,7 +10,7 @@ stderr_logfile=/var/log/postfix/err.log
 stdout_logfile=/var/log/postfix/out.log
 
 [program:health_server]
-command=/usr/local/bin/node /health_server.js
+command=/usr/bin/node /health_server.js
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/postfix/health_server.err.log
