--- a/images/postfix/supervisord.conf
+++ b/images/postfix/supervisord.conf
@@ -15,3 +15,11 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/postfix/health_server.err.log
 stdout_logfile=/var/log/postfix/health_server.out.log
+
+[program:opendkim]
+command=/usr/sbin/opendkim -f -x /etc/opendkim.conf
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/postfix/opendkim.err.log
+stdout_logfile=/var/log/postfix/opendkim.out.log
+user=opendkim
