--- a/images/haraka/config/duotail.ini
+++ b/images/haraka/config/duotail.ini
@@ -13,5 +13,6 @@ topic = message-summary
 clusterName = hazelcast-cluster
 ; Cluster Members. Comma delimited list.
 clusterMembers = hazelcast
-; Cache Map Name
+; Cache Map Names
 cacheMapName = my-cache
+emailIdCacheMapName = my-id-cache
