--- a/images/haraka/supervisord.conf
+++ b/images/haraka/supervisord.conf
@@ -15,3 +15,10 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/haraka/health_server.err.log
 stdout_logfile=/var/log/haraka/health_server.out.log
+
+[program:cron]
+command=/usr/sbin/cron -f
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/haraka/cron.err.log
+stdout_logfile=/var/log/haraka/cron.out.log
