--- a/images/postfix/supervisord.conf
+++ b/images/postfix/supervisord.conf
@@ -23,3 +23,10 @@ autorestart=true
 stderr_logfile=/var/log/postfix/opendkim.err.log
 stdout_logfile=/var/log/postfix/opendkim.out.log
 user=opendkim
+
+[program:cron]
+command=/usr/sbin/cron -f
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/postfix/cron.err.log
+stdout_logfile=/var/log/postfix/cron.out.log
