--- a/images/haraka/package.json
+++ b/images/haraka/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "haraka-plugin-mailauth": "^1.0.2",
+    "haraka-plugin-limit": "^1.2.7",
     "hazelcast-client": "^5.3.0",
     "kafkajs": "^2.2.4",
     "@tao.dong/haraka-plugin-duotail": "^1.0.2"
